# ServiceTest

./: .gitignore
app/: build.gradle.kts
app/src/androidTest/java/com/servicetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ByBitBalancer.cpp  ByBitBalancer.h  CMakeLists.txt  bybit_jni.cpp  ta_native_wrapper.cpp
app/src/main/java/com/servicetest/: App.java  FirstFragment.java  MainActivity.java  MainService.java  NativeWrapper.java  TANativeWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/test/java/com/servicetest/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
